Fix some spacing and logic issues in object values

--- a/src/ui/components/inputs.module.css
+++ b/src/ui/components/inputs.module.css
@@ -46,3 +46,7 @@
 .input.warning {
 	background-color: var(--danger-faint);
 }
+
+.disabled {
+	color: var(--neutral);
+}
